<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/small_spacing"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_spacing"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/sign_up_go_to_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing"
                android:text="@string/sign_in"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/illustration_image_size"
            android:src="@drawable/signupillustration" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing"
            android:background="@drawable/edittextbackground"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="@dimen/spacing" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing"
            android:background="@drawable/edittextbackground"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/spacing" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing"
            android:background="@drawable/edittextbackground"
            android:hint="@string/password"
            android:padding="@dimen/spacing" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing"
            android:background="@drawable/edittextbackground"
            android:hint="@string/confirm_password"
            android:padding="@dimen/spacing" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_spacing"
            android:layout_marginBottom="@dimen/spacing"
            android:background="@drawable/roundbutton"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>