<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_in_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/small_spacing"
    tools:context=".SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_spacing"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimary" />

            <ImageButton
                android:id="@+id/sign_in_go_to_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/forward" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/illustration_image_size"
            android:src="@drawable/signinillustration" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_in_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/spacing"
            android:background="@drawable/edittextbackground"
            android:hint="@string/email"
            android:padding="@dimen/spacing" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_in_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing"
            android:background="@drawable/edittextbackground"
            android:hint="@string/password"
            android:padding="@dimen/spacing" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_spacing"
            android:background="@drawable/roundbutton"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/sign_in_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/large_spacing"
            android:layout_marginBottom="@dimen/spacing"
            android:clickable="true"
            android:foreground="?android:selectableItemBackground"
            android:text="@string/forgot_password" />

    </LinearLayout>

</ScrollView>